Layout finalizado: header corrigido e galeria alinhada

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -34,7 +34,6 @@ body {
     transform: scale(1.02);
 }
 [city-buttons] {
-    margin-top: -30px;
     margin-bottom: 20px;
 }
 
@@ -57,4 +56,16 @@ footer .navbar {
 }
 [include*="galery.html"] {
     flex: 1 0 auto;
+}
+
+/* Isso impede que qualquer coisa "vaze" para os lados do corpo do site */
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
+
+/* Garante que as imagens da galeria nunca passem da largura da tela */
+img {
+    max-width: 100%;
+    height: auto;
 }
