--- a/src/pages/template/header.html
+++ b/src/pages/template/header.html
@@ -22,11 +22,11 @@
                 <ul class="list-unstyled">
                     <li>
                         <a href="https://x.com" class="text-white" target="_blank">
-                            <i class="fa fa-x-twitter"></i> Twitter</a>
+                           <i class="fa-brands fa-twitter"></i> Twitter</a>
                         </li>
                         <li>
                             <a href="https://facebook.com" class="text-white" target="_blank">
-                                <i class="class fa fa-facebook-f"></i> Facebook</a>
+                                <i class="fa-brands fa-facebook"></i> Facebook</a>
                             </li>
                             <li>
                                 <a href="mailto:#" class="text-white">
